--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -16,3 +16,10 @@
 .home-tasks-container{
     margin-top: 3rem
 }
+
+.react-datepicker-wrapper,
+.react-datepicker__input-container,
+.react-datepicker__input-container input {
+  display: block;
+  width: 100%;
+}
