UPDATE: se termina el crud de tasks

--- a/src/components/common/style.css
+++ b/src/components/common/style.css
@@ -1,3 +1,8 @@
+body{
+    /* background-color: red !important; */
+    background-color: #d7cedf !important;
+}
+
 .loader-container{
     display: flex;
     justify-content: center;
