--- a/src/components/common/style.css
+++ b/src/components/common/style.css
@@ -26,3 +26,15 @@ body{
     pointer-events: none;
     color: #495057;
 }
+
+.error {
+    color: #9f3a38;
+}
+
+.error > input {
+    background-color: #fff6f6;
+	border-color: #e0b4b4;
+	color: #9f3a38;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
