UPDATE: agregando logout cuando se recibe codigo 401 en las peticiones

--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -47,3 +47,9 @@
     display: flex;
     align-items: center;
 }
+
+.home-bg-img{
+    background-image: url('../../assets/img/lila-bg.jpg');
+    background-size: cover;
+    height: 100vh;
+}
