FIX: arreglando el alto del background de home

--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -51,5 +51,5 @@
 .home-bg-img{
     background-image: url('../../assets/img/lila-bg.jpg');
     background-size: cover;
-    height: 100vh;
+    min-height: 100vh;
 }
