--- a/src/components/common/style.css
+++ b/src/components/common/style.css
@@ -39,6 +39,14 @@ body{
 	box-shadow: none;
 }
 
+.error > select {
+    background-color: #fff6f6;
+	border-color: #e0b4b4;
+	color: #9f3a38;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
 .break-word {
     overflow-wrap: break-word;
 }
